Добавлена проверка аргументов с помощью option, проверка содержания файла,